marco and template versions split files

--- a/itoa/itoa.vcxproj
+++ b/itoa/itoa.vcxproj
@@ -139,7 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="itoa.cpp" />
+    <ClCompile Include="itoa_jeaiii.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
