--- a/itoa/itoa.vcxproj.filters
+++ b/itoa/itoa.vcxproj.filters
@@ -25,4 +25,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="int_to_chars_jeaiii.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
