--- a/itoa/itoa.vcxproj.filters
+++ b/itoa/itoa.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="int_to_chars_jeaiii.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="jeaiii_to_text.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
