--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\itoa\to_text.h" />
+    <ClInclude Include="..\include\itoa\jeaiii_to_text.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
