--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -39,5 +39,5 @@ jobs:
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
       
     - name: Test
-      working-directory: ${{env.SOLUTION_FILE_PATH}}\x64\Release
-      run: test
+      working-directory: ${{env.SOLUTION_FILE_PATH}}/x64/Release
+      run: ./test.exe
