--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -21,24 +21,18 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
-    env:
-      VS_PATH: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\
-      MSBUILD_PATH: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\
+    
     steps:
     - uses: actions/checkout@v3
 
-#    - name: Add MSBuild to PATH
-#      uses: microsoft/setup-msbuild@v1.0.2
-
-#    - name: Restore NuGet packages
-#      working-directory: ${{env.GITHUB_WORKSPACE}}
-#      run: nuget restore ${{env.SOLUTION_FILE_PATH}}
+    - name: Setup
+      uses: microsoft/setup-msbuild@v1.1.3
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: '"%MSBUILD_PATH%\MSBuild.exe" /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}'
+      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
       
     - name: Test
       working-directory: ${{env.SOLUTION_FILE_PATH}}/x64/Release
