--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -21,16 +21,12 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
-
+    
     steps:
     - uses: actions/checkout@v3
 
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.2
-
-#    - name: Restore NuGet packages
-#      working-directory: ${{env.GITHUB_WORKSPACE}}
-#      run: nuget restore ${{env.SOLUTION_FILE_PATH}}
+    - name: Setup
+      uses: microsoft/setup-msbuild@v1.1.3
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
